--- a/Jop-Project/pug/partials/_header.pug
+++ b/Jop-Project/pug/partials/_header.pug
@@ -1,5 +1,6 @@
 header#home
-  include ./_nav.pug       
+  div.container-fluid.row
+    include ./_nav.pug       
     div.overlay
       div(class="text-center header-body col-12")
         div.form.row.text-center
