--- a/Jop-Project/pug/signup.pug
+++ b/Jop-Project/pug/signup.pug
@@ -5,8 +5,7 @@ html
     title JOB
   body
     header#home
-        div.container-fluid.row
-            include ./partials/_nav.pug
+        include ./partials/_nav.pug
     section#login
         div.login-page
             header.headerLinks
@@ -22,20 +21,22 @@ html
                     li 
                         a(href="#") العربية
             div.text-center
-                h3.welcom Welcome, to contain please log in
+                h3.welcom Welcome, to contain please sign Up
             form
                 div.form-content.text-center
+                    div.form-group.text-center
+                        input(type="usermane" id="name" class="form-control input-underline input-lg" placeholder=" Your name")
                     div.form-group.text-center
                         input(type="email" id="textEmail" class="form-control input-underline input-lg" placeholder=" Your email")
                     div.form-group.text-center
                         input(type="password" class="form-control input-underline input-lg" id="inputEmail3" placeholder="Password")
                     p(class="forgetpassword-class") 
-                        button(type="submit" class="btn rounded-btn" onClick="myFunction()") Login
+                        button(type="submit" class="btn rounded-btn" onClick="myFunction()") regseter
                         a(href="") Forget Password
                     
                     div
-                        p you don't have anccount!  
-                            a(href="./signup.html") Register
+                        p you have anccount!  
+                            a(href="./login.html") login
     include ./partials/_footer.pug
     script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous")
